--- a/Ex2/exercice2.html
+++ b/Ex2/exercice2.html
@@ -3,18 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>exercice2</title>
 </head>
 <body>
-    <p>Test</p>
-    <input type="color" name="" id="couleur">
-    <input type="number" name="" id="nombre" value = "30">
-    <select name="" id="police">
+    <table>
+        <tr >
+    <td id="test">Test</td></tr>
+    <tr><td><input type="color" name="" id="couleur"></td>
+        <td><input type="number" name="" id="nombre" value = "30"></td>
+        <td><select name="" id="police">
         <option value="Verdana">Verdana</option>
         <option value="Garamond">Garamond</option>
         <option value="arial">arial</option>
-</select>
-
+</select></tr></td>
+</table>
 
 <script src="script.js"></script>
 </body>
