--- a/Ex4/exercice4.html
+++ b/Ex4/exercice4.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js"></script>
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
     <title>exercice4</title>
 </head>
 <body>
     <ol>
-        <li>element1</li>
-        <li>element2</li>
-        <li>element3</li>
-        <li>element4</li>
-        <li>element5</li>
-        <li>element6</li>
+        <li class = "list-group-item list-group-item-action list-group-item-dark">element1</li>
+        <li class = "list-group-item list-group-item-action list-group-item-dark">element2</li>
+        <li class = "list-group-item list-group-item-action list-group-item-dark">element3</li>
+        <li class = "list-group-item list-group-item-action list-group-item-dark">element4</li>
+        <li class = "list-group-item list-group-item-action list-group-item-dark">element5</li>
+        <li class = "list-group-item list-group-item-action list-group-item-dark">element6</li>
     </ol>
 </body>
 </html>
