--- a/EX1/exercice1.html
+++ b/EX1/exercice1.html
@@ -3,18 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>exercice1</title>
 </head>
 <body>
-    <label>niveau de difficulte</label>
-<select id="difficulty">
+    <table>
+        <tr>
+            <td>
+    <label>niveau de difficulte: </label></td>
+    <td><select id="difficulty">
     <option value="10">1</option>
     <option value="5">2</option>
     <option value="3">3</option>
-</select>
+</select></td>
 
-  <input type="button" id = "reset" value="relancer la partie">
-    
+<td><input type="button" id = "reset" value="relancer la partie"></td>
+</tr></table>
     <script src = "script.js"></script>
 
 </body>
