--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tp1-web</title>
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="Ex1/exercice1.html">
+    <a href="Ex1/exercice1.html" class = "list-group-item list-group-item-action list-group-item-primary">
         <h1>Exercice 1</h1>
     </a>
-    <a href="Ex2/exercice2.html">
+    <a href="Ex2/exercice2.html" class = "list-group-item list-group-item-action list-group-item-primary">
         <h1>Exercice 2</h1>
     </a>
-    <a href="Ex3/exercice3.html">
+    <a href="Ex3/exercice3.html" class = "list-group-item list-group-item-action list-group-item-primary">
         <h1>Exercice 3</h1>
     </a>
-    <a href="Ex4/exercice4.html">
+    <a href="Ex4/exercice4.html" class = "list-group-item list-group-item-action list-group-item-primary">
         <h1>Exercice 4</h1>
     </a>
 </body>
